Ensure express payment buttons are visible next to each other (https://github.com/woocommerce/woocommerce-blocks/pull/8548)

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout-shared/payment-methods/express-payment/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout-shared/payment-methods/express-payment/style.scss
@@ -88,6 +88,7 @@ $border-radius: 5px;
 
 	.wc-block-components-express-payment__event-buttons {
 		> li {
+			box-sizing: border-box;
 			display: inline-block;
 			width: 50%;
 		}
